20120607
accommodates user-specified number of fins
can output to user-specified file